--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 /examples/corn*
 /TEST/
+/cornstone
+/cornstone.exe
 /manifest*
 /*.zip
+/*.tar.gz
 
 # Created by https://www.toptal.com/developers/gitignore/api/intellij+all,go
 # Edit at https://www.toptal.com/developers/gitignore?templates=intellij+all,go
